hello-world/istio/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: hello-world
spec:
  mtls:
    mode: STRICT
